--- a/index.html
+++ b/index.html
@@ -17,214 +17,7 @@
 }
 
 *{box-sizing:border-box;}
-
-body{
-  margin:0;
-  min-height:100vh;
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-  background: radial-gradient(circle at 20% 20%, var(--bg2), var(--bg1));
-  color:var(--text);
-  overflow:auto;
-  padding: 18px 12px; /* Luft am Rand */
-  display:flex;
-  justify-content:center;
-  align-items:center;
-}
-
-.wrap{
-  width:min(520px, 95vw);
-  background:var(--card);
-  border-radius:24px;
-  padding:18px 16px 20px;
-  box-shadow:0 25px 60px rgba(0,0,0,.20);
-  max-height: 92vh;
-  overflow:auto;
-  text-align:center;
-}
-
-.title{
-  font-size: clamp(22px, 5.5vw, 34px);
-  font-weight: 900;
-  margin: 4px 0 6px;
-}
-
-.subtitle{
-  font-size: 13px;
-  opacity:.75;
-  margin: 0 0 10px;
-}
-
-.heart-area{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  margin: 10px 0 6px;
-}
-
-/* Herz responsive (skaliert auf Handy) */
-.heart{
-  width: clamp(88px, 28vw, 140px);
-  height: clamp(88px, 28vw, 140px);
-  background:var(--accent);
-  position:relative;
-  transform:rotate(-45deg);
-  cursor:pointer;
-  border-radius:18px;
-  box-shadow:0 16px 30px rgba(255,59,122,.35);
-  transition: transform .15s ease, filter .15s ease;
-}
-
-.heart:before,
-.heart:after{
-  content:"";
-  width: 100%;
-  height: 100%;
-  background:var(--accent);
-  border-radius:50%;
-  position:absolute;
-}
-
-.heart:before{
-  top:-50%;
-  left:0;
-}
-
-.heart:after{
-  left:50%;
-  top:0;
-}
-
-.heart:hover{ filter: brightness(1.05); }
-.heart:active{ transform: rotate(-45deg) scale(.98); }
-
-.panel{
-  max-height:0;
-  overflow:hidden;
-  transition:max-height .6s ease;
-  margin-top: 10px;
-}
-
-.panel.open{
-  max-height: 6000px;
-}
-
-.question{
-  font-size: 17px;
-  font-weight: 900;
-  margin: 10px 0 14px;
-}
-
-.btn-row{
-  position:relative;
-  height: 56px;
-  margin-bottom: 6px;
-}
-
-button{
-  padding:12px 18px;
-  font-size:16px;
-  border:none;
-  border-radius:14px;
-  font-weight:900;
-  cursor:pointer;
-  min-width: 120px;
-  box-shadow: 0 10px 18px rgba(0,0,0,.08);
-}
-
-#yesBtn{
-  background:var(--yes);
-  color:#fff;
-}
-
-#noBtn{
-  background:var(--no);
-  color:#fff;
-  position:absolute;
-  left: 52%;
-  top:0;
-  transform: translateX(-50%);
-  touch-action:none;
-}
-
-.gift{
-  display:none;
-  margin-top: 16px;
-  text-align:left;
-  line-height:1.6;
-  background: rgba(255,255,255,.65);
-  border: 1px solid rgba(255,59,122,.18);
-  border-radius: 18px;
-  padding: 14px 14px;
-}
-
-.gift.show{ display:block; }
-
-.signature{
-  margin-top: 16px;
-  font-weight: 900;
-  text-align:center;
-}
-
-.smallhint{
-  margin-top: 10px;
-  font-size: 12px;
-  opacity:.7;
-}
-</style>
-</head>
-
-<body>
-  <div class="wrap">
-    <div class="title">Für Mausi 💖✨</div>
-    <div class="subtitle">Tippe auf das Herz</div>
-
-    <div class="heart-area">
-      <div class="heart" id="heart" aria-label="Herz öffnen" role="button" tabindex="0"></div>
-    </div>
-
-    <div class="panel" id="panel">
-      <div class="question">Bist du bereit für dein Valentinstagsgeschenk?</div>
-
-      <div class="btn-row" id="btnRow">
-        <button id="yesBtn">Ja 💖</button>
-        <button id="noBtn">Nein 🙈</button>
-      </div>
-
-      <div class="gift" id="gift">
-        <div style="font-weight:900; font-size:18px; margin-bottom:10px;">Mein Geschenk für dich 💝</div>
-
-        <div>
-          Mein wunderschönes Mädchen🥰,<br><br>
-
-          heute ist Valentinstag 💐– aber wenn ich ehrlich bin, fühlt sich jeder Tag mit dir an wie ein kleiner Feiertag. Und trotzdem möchte ich diesen besonderen Tag nutzen, um dir etwas zu sagen, was ich vielleicht viel öfter sagen sollte, wirklich viel öfter – und zwar nicht nur zwischendurch, sondern mit ganzem Herzen.<br><br>
-
-          Ich liebe dich.❤️ Nicht nur ein bisschen. Nicht nur, weil du süß bist oder weil du mich zum Lachen bringst. Ich liebe dich in einer Tiefe, die ich selbst manchmal kaum begreifen kann. Du bist nicht einfach „meine Freundin“. Du bist mein Zuhause. Mein sicherer Hafen. Mein Ruhepol, wenn alles laut wird. Meine Motivation, wenn ich zweifle. Mein größter Schatz❤️<br><br>
-
-          Ich sehe, was du jeden Tag leistest – auch wenn du selbst es oft herunterspielst und nicht die Dankbarkeit fühlst. Ich sehe, wie viel Herz du in unsere Beziehung steckst. Wie du dich kümmerst. Wie du mitdenkst. Wie du für uns da bist. Wie du mir den Rücken stärkst, selbst wenn du selbst müde bist. Du gibst so viel – Liebe, Geduld, Wärme, Verständnis – und manchmal habe ich das Gefühl, du merkst gar nicht, wie außergewöhnlich das ist.❤️<br><br>
-
-          Du bist so unfassbar stark. Stärker, als du es dir selbst zutraust. Du trägst so viel – deine eigenen Herausforderungen, deine Gedanken, deine Verantwortung – und trotzdem schaffst du es, zu lächeln. Für uns. Für mich. Du bist ein Mensch mit einem riesigen Herzen und einer unglaublichen inneren Kraft. Und ich wünsche mir so sehr, dass du dich selbst einmal mit meinen Augen sehen könntest.<br><br>
-
-          Du würdest sehen: Eine Frau, die mutig ist.<br>
-<!doctype html>
-<html lang="de">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Für Mausi ❤️</title>
-
-<style>
-:root{
-  --bg1:#ff6fa6;
-  --bg2:#ffd1e3;
-  --card:#ffffffee;
-  --accent:#ff3b7a;
-  --yes:#22c55e;
-  --no:#ef4444;
-  --text:#2b1b24;
-}
-
-*{box-sizing:border-box;}
-html,body{height:100%;}
+html,body{height:auto;}
 
 body{
   margin:0;
@@ -235,21 +28,18 @@ body{
     radial-gradient(circle at 85% 80%, rgba(255,255,255,.35), transparent 40%),
     radial-gradient(circle at 20% 20%, var(--bg2), var(--bg1));
   color:var(--text);
-  overflow:auto;
-  padding: 18px 12px;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+  overflow:auto;                 /* ✅ WICHTIG: Seite darf scrollen */
+  padding: 18px 12px 40px;       /* ✅ unten extra Luft */
+  display:block;                 /* ✅ kein flex-centering -> keine Scroll-Probleme */
 }
 
 .wrap{
   width:min(520px, 95vw);
+  margin: 0 auto;                /* ✅ schön zentriert */
   background:var(--card);
   border-radius:24px;
   padding:18px 16px 20px;
   box-shadow:0 25px 60px rgba(0,0,0,.20);
-  max-height: 92vh;
-  overflow:auto;
   text-align:center;
   position:relative;
   border: 1px solid rgba(255,255,255,.55);
@@ -297,13 +87,12 @@ body{
 .heart:before,
 .heart:after{
   content:"";
-  width: 100%;
-  height: 100%;
+  width:100%;
+  height:100%;
   background:var(--accent);
   border-radius:50%;
   position:absolute;
 }
-
 .heart:before{ top:-50%; left:0; }
 .heart:after{ left:50%; top:0; }
 
@@ -318,8 +107,7 @@ body{
   transition:max-height .65s ease;
   margin-top: 10px;
 }
-
-.panel.open{ max-height: 7000px; }
+.panel.open{ max-height: 12000px; } /* ✅ sehr hoch */
 
 .question{
   font-size: 17px;
@@ -366,7 +154,20 @@ button:active{ transform: scale(.98); }
   border: 1px solid rgba(255,59,122,.18);
   border-radius: 18px;
   padding: 14px 14px;
-  position:relative;
+}
+
+/* ✅ Der Trick: Text hat eigenen Scrollbereich */
+.giftTextBox{
+  max-height: 55vh;      /* auf Handy angenehm */
+  overflow:auto;
+  padding-right: 6px;
+}
+
+/* schöner Scrollbar (optional) */
+.giftTextBox::-webkit-scrollbar{ width: 8px; }
+.giftTextBox::-webkit-scrollbar-thumb{
+  background: rgba(255,59,122,.25);
+  border-radius: 10px;
 }
 
 .gift.show{ display:block; }
@@ -377,7 +178,6 @@ button:active{ transform: scale(.98); }
   text-align:center;
 }
 
-/* Text-Reveal (Typewriter) */
 .type{
   font-size:15px;
   white-space: pre-wrap;
@@ -427,7 +227,9 @@ button:active{ transform: scale(.98); }
     <div class="gift" id="gift">
       <div style="font-weight:900; font-size:18px; margin-bottom:10px;">Mein Geschenk für dich 💝</div>
 
-      <div class="type" id="typeTarget"></div><span class="cursor" id="cursor">|</span>
+      <div class="giftTextBox">
+        <div class="type" id="typeTarget"></div><span class="cursor" id="cursor">|</span>
+      </div>
 
       <div class="signature">Dein Papa 🥰</div>
     </div>
@@ -437,7 +239,6 @@ button:active{ transform: scale(.98); }
 </div>
 
 <script>
-/* ========= DEIN TEXT ========= */
 const FULL_TEXT = `Mein wunderschönes Mädchen🥰,
 
 heute ist Valentinstag 💐– aber wenn ich ehrlich bin, fühlt sich jeder Tag mit dir an wie ein kleiner Feiertag. Und trotzdem möchte ich diesen besonderen Tag nutzen, um dir etwas zu sagen, was ich vielleicht viel öfter sagen sollte, wirklich viel öfter – und zwar nicht nur zwischendurch, sondern mit ganzem Herzen.
@@ -460,14 +261,12 @@ Und ich hoffe, du spürst jeden einzelnen Tag, wie unglaublich wertvoll du für 
 Frohen Valentinstag, meine wundervolle, starke, einzigartige Frau.
 Ich liebe dich – mehr, als Worte jemals beschreiben und Handlungen dich fühlen lassen könnten❤️`;
 
-/* ========= UI ========= */
 const heart = document.getElementById("heart");
 const panel = document.getElementById("panel");
 const yesBtn = document.getElementById("yesBtn");
 const noBtn = document.getElementById("noBtn");
 const gift = document.getElementById("gift");
 const btnRow = document.getElementById("btnRow");
-
 const typeTarget = document.getElementById("typeTarget");
 const cursor = document.getElementById("cursor");
 
@@ -477,21 +276,17 @@ heart.addEventListener("keydown", (e)=> {
   if(e.key === "Enter" || e.key === " ") openPanel();
 });
 
-/* ========= Nein-button dodge ========= */
 function dodge(){
   const rowRect = btnRow.getBoundingClientRect();
   const btnRect = noBtn.getBoundingClientRect();
   const maxX = Math.max(0, rowRect.width - btnRect.width);
   const maxY = Math.max(0, rowRect.height - btnRect.height);
-
   const x = Math.floor(Math.random() * (maxX + 1));
   const y = Math.floor(Math.random() * (maxY + 1));
-
   noBtn.style.left = x + "px";
   noBtn.style.top  = y + "px";
   noBtn.style.transform = "none";
 }
-
 ["mouseenter","mouseover","mousedown","touchstart","pointerdown"].forEach(evt=>{
   noBtn.addEventListener(evt, (e)=>{
     e.preventDefault();
@@ -499,34 +294,28 @@ function dodge(){
   }, {passive:false});
 });
 
-/* ========= Typewriter ========= */
 let typing = false;
 function typeText(text, speed=14){
   if(typing) return;
   typing = true;
   typeTarget.textContent = "";
   cursor.style.display = "inline-block";
-
   let i = 0;
   const tick = () => {
-    // kleine Beschleunigung bei langen Texten
-    const s = (i < 600) ? speed : Math.max(6, speed-6);
-
+    const s = (i < 700) ? speed : Math.max(6, speed-6);
     typeTarget.textContent += text[i];
     i++;
-
     if(i < text.length){
       setTimeout(tick, s);
     }else{
       typing = false;
-      // cursor nach kurzem Moment ausblenden
       setTimeout(()=> cursor.style.display = "none", 900);
     }
   };
   tick();
 }
 
-/* ========= Konfetti ========= */
+/* Confetti */
 const canvas = document.getElementById("confetti");
 const ctx = canvas.getContext("2d");
 let W,H;
@@ -539,18 +328,15 @@ resize();
 
 let confetti = [];
 let confettiRunning = false;
-
 function rand(min,max){ return Math.random()*(max-min)+min; }
 
 function launchConfetti(durationMs=2200){
   const start = performance.now();
   confettiRunning = true;
   confetti = [];
-
   const colors = ["#ff3b7a","#ffd1e3","#ffffff","#ff6fa6","#ffb3d1"];
-
-  // Partikel erzeugen
   const count = 180;
+
   for(let i=0;i<count;i++){
     confetti.push({
       x: rand(0,W),
@@ -566,8 +352,6 @@ function launchConfetti(durationMs=2200){
 
   function frame(t){
     ctx.clearRect(0,0,W,H);
-
-    // weiches fade-out nach Dauer
     const p = Math.min(1, (t - start) / durationMs);
     const alpha = 1 - p;
     ctx.globalAlpha = Math.max(0, alpha);
@@ -578,7 +362,6 @@ function launchConfetti(durationMs=2200){
       c.vy *= 1.005;
       c.rot += c.vr;
 
-      // draw rectangle
       ctx.save();
       ctx.translate(c.x, c.y);
       ctx.rotate(c.rot);
@@ -599,16 +382,19 @@ function launchConfetti(durationMs=2200){
   requestAnimationFrame(frame);
 }
 
-/* ========= Ja-Click ========= */
 yesBtn.addEventListener("click", ()=>{
   gift.classList.add("show");
   noBtn.style.display = "none";
   yesBtn.disabled = true;
   yesBtn.style.opacity = 0.9;
 
-  // Konfetti + Typewriter starten
   if(!confettiRunning) launchConfetti();
   typeText(FULL_TEXT, 14);
+
+  // ✅ Nach dem Öffnen automatisch zum Text scrollen
+  setTimeout(()=>{
+    gift.scrollIntoView({behavior:"smooth", block:"start"});
+  }, 250);
 });
 </script>
 </body>
